cli: fix MAC address validation (bgo #736275)

nm_utils_hwaddr_valid() accepts length while check_mac() mistakenly passes
type.

(broken by 3a54d050985d6ef2067b025571910a8ccd3cbd57)

https://bugzilla.gnome.org/show_bug.cgi?id=736275